--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron": "^35.0.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "wait-on": "^8.0.3"
   }
 }
