--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,45 @@
-selenium
-webdriver_manager
-pycryptodome
-matplotlib
-pandastable
+attrs==25.3.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+Flask==3.1.0
+fonttools==4.56.0
+future==1.0.0
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+numexpr==2.10.2
+numpy==2.2.4
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+pandastable==0.13.1
+pillow==11.1.0
+pycryptodome==3.22.0
+pyparsing==3.2.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+requests==2.32.3
+selenium==4.29.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+xlrd==2.0.1
