--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "keytar": "^7.9.0",
+    "moment": "^2.30.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
