--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "find-free-port": "^2.0.0",
     "keytar": "^7.9.0",
     "moment": "^2.30.1",
+    "puppeteer": "^24.6.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
