--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 attrs==25.3.0
+bcrypt==4.3.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 contourpy==1.3.1
+crypto==1.4.1
 cycler==0.12.1
 Flask==3.1.0
 fonttools==4.56.0
@@ -15,6 +17,7 @@ Jinja2==3.1.6
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+Naked==0.1.32
 numexpr==2.10.2
 numpy==2.2.4
 outcome==1.3.0.post0
@@ -28,8 +31,10 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+PyYAML==6.0.2
 requests==2.32.3
 selenium==4.29.0
+shellescape==3.8.1
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
