--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "keytar": "^7.9.0",
     "moment": "^2.30.1",
     "puppeteer": "^24.6.0",
+    "random-words": "^2.0.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
