--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bootstrap": "^5.3.3",
     "create-react-app": "^5.1.0",
     "dotenv": "^16.4.7",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "find-free-port": "^2.0.0",
     "keytar": "^7.9.0",
     "moment": "^2.30.1",
