--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "MetaPriv",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "description": "An automated tool that allows Facebook users to obfuscate their data and conceal their real interests and habits from Facebook.",
   "main": "main.js",
   "build": {
-    "productName": "MetaPriv"
+    "productName": "MetaPriv",
+    "appId": "fi.tuni.asif.ibtehaz",
+    "files": [
+      "build/**/*",
+      "main.js",
+      "preload.js",
+      "bot/**/*",
+      "database/**/*",
+      "utility/**/*",
+      "frontend/build/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "scripts": {
     "start": "electron .",
     "debug": "electron --trace-warnings .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react-build": "cd frontend && npm run build",
+    "postinstall": "electron-builder install-app-deps",
+    "pack": "npm run react-build && electron-builder --dir",
+    "dist": "npm run react-build && electron-builder"
   },
   "repository": {
     "type": "git",
@@ -23,7 +40,8 @@
   },
   "homepage": "https://github.com/shepherd-06/MetaPriv#readme",
   "devDependencies": {
-    "electron": "^35.0.0"
+    "electron": "^35.4.0",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -34,10 +52,11 @@
     "dotenv": "^16.4.7",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "electron-is-dev": "^3.0.1",
     "find-free-port": "^2.0.0",
     "keytar": "^7.9.0",
     "moment": "^2.30.1",
-    "puppeteer": "^24.6.0",
+    "puppeteer": "^19.11.1",
     "random-words": "^2.0.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
