--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "homepage": "./",
   "private": true,
   "dependencies": {
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "bump": "node version-updater.js",
+    "build": "npm run bump && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
