--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MetaPriv",
-  "version": "0.0.6",
+  "version": "1.0.3-alpha",
   "description": "An automated tool that allows Facebook users to obfuscate their data and conceal their real interests and habits from Facebook.",
   "main": "main.js",
   "build": {
@@ -13,7 +13,8 @@
       "bot/**/*",
       "database/**/*",
       "utility/**/*",
-      "frontend/build/**/*"
+      "frontend/build/**/*",
+      "assets/**/*"
     ],
     "directories": {
       "buildResources": "assets"
@@ -22,18 +23,19 @@
   "scripts": {
     "start": "electron .",
     "debug": "electron --trace-warnings .",
+    "bump": "node version-updater.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-build": "cd frontend && npm run build",
-    "postinstall": "electron-builder install-app-deps",
-    "pack": "npm run react-build && electron-builder --dir",
-    "dist": "npm run react-build && electron-builder"
+    "postinstall": "npm run bump && electron-builder install-app-deps",
+    "pack": "npm run bump && npm run react-build && electron-builder --dir",
+    "dist": "npm run postinstall && npm run react-build && electron-builder"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shepherd-06/MetaPriv.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ibtehaz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shepherd-06/MetaPriv/issues"
